// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Check should match snapshot default 1`] = `
<body>
  <div>
    <div
      class=""
    >
       
      <label
        class="_atom_frm__label _atom_frm__label___checkbox"
        for="test"
      >
        <input
          class="_atom_frm__checkbox"
          id="test"
          name="test"
          type="checkbox"
        />
         
        
      </label>
       
      <small
        class="_atom_frm__error___message"
        title=""
      >
        
      </small>
    </div>
  </div>
</body>
`;

exports[`Check should match snapshot props 1`] = `
<body>
  <div>
    <div
      class="customCss"
    >
      <span
        class="_atom_frm__label"
        id="test_label"
      >
        Do you agree with the terms?
      </span>
       
      <label
        class="_atom_frm__label _atom_frm__label___checkbox"
        for="test"
      >
        <input
          class="_atom_frm__checkbox"
          id="test"
          name="test"
          type="checkbox"
        />
         
        <span
          aria-label="agree"
        >
          agree
        </span>
        
      </label>
       
    </div>
  </div>
</body>
`;

exports[`CheckGroup should match snapshot default 1`] = `
<body>
  <div>
    <div
      class=""
    >
       
      <div
        aria-labelledby="test_choices_label"
        class="_atom_frm__group"
      />
    </div>
  </div>
</body>
`;

exports[`CheckGroup should match snapshot props 1`] = `
<body>
  <div>
    <div
      class="customCss"
    >
      <span
        class="_atom_frm__label _atom_frm__label___required"
        id="test_choices_label"
      >
        Choices:
      </span>
       
      <div
        aria-labelledby="test_choices_label"
        class="_atom_frm__group"
      >
        
        <label
          class="_atom_frm__label _atom_frm__label___checkbox"
        >
          <input
            class="_atom_frm__checkbox"
            id="test_choices"
            name="test"
            required=""
            showerror="false"
            type="checkbox"
            value="a"
          />
           
          <span
            aria-label="a"
          >
            a
          </span>
           
        </label>
        
        <label
          class="_atom_frm__label _atom_frm__label___checkbox"
        >
          <input
            class="_atom_frm__checkbox"
            id="test_choices"
            name="test"
            required=""
            showerror="false"
            type="checkbox"
            value="b"
          />
           
          <span
            aria-label="b"
          >
            b
          </span>
           
        </label>
        
        <label
          class="_atom_frm__label _atom_frm__label___checkbox"
        >
          <input
            class="_atom_frm__checkbox"
            id="test_choices"
            name="test"
            required=""
            showerror="false"
            type="checkbox"
            value="c"
          />
           
          <span
            aria-label="c"
          >
            c
          </span>
           
        </label>
      </div>
    </div>
  </div>
</body>
`;

exports[`Checkbox should match snapshot default 1`] = `
<body>
  <div>
    <input
      class="_atom_frm__checkbox"
      type="checkbox"
    />
  </div>
</body>
`;

exports[`Checkbox should match snapshot props 1`] = `
<body>
  <div>
    <input
      class="_atom_frm__checkbox customCss _atom_frm__checkbox___switch"
      required=""
      type="checkbox"
    />
  </div>
</body>
`;

exports[`Combo should match snapshot default 1`] = `
<body>
  <div>
    <div
      class=""
    >
       
      <select
        class="_atom_frm__base _atom_frm__select _atom_frm__standard"
        id="test"
        name="test"
      >
        
      </select>
       
    </div>
  </div>
</body>
`;

exports[`Combo should match snapshot props 1`] = `
<body>
  <div>
    <div
      class="customCss"
    >
      <label
        class="_atom_frm__label _atom_frm__label___required"
        for="test"
        required="true"
      >
        <b>
          Test
        </b>
        
      </label>
       
      <select
        class="_atom_frm__base _atom_frm__select _atom_frm__outline"
        id="test"
        name="test"
        required=""
      >
        
      </select>
       
      <small
        class="_atom_frm__error___message"
        title=""
      >
        
      </small>
    </div>
  </div>
</body>
`;

exports[`Input invalid type 1`] = `
<body>
  <div>
    <input
      class="_atom_frm__base "
      type="text"
    />
  </div>
</body>
`;

exports[`Input should match snapshot default 1`] = `
<body>
  <div>
    <input
      class="_atom_frm__base "
      type="text"
    />
  </div>
</body>
`;

exports[`Input should match snapshot props 1`] = `
<body>
  <div>
    <input
      class="_atom_frm__base customCss"
      required=""
      type="tel"
    />
  </div>
</body>
`;

exports[`Label should match snapshot default 1`] = `
<body>
  <div>
    <label
      class="_atom_frm__label"
    />
  </div>
</body>
`;

exports[`Label should match snapshot props 1`] = `
<body>
  <div>
    <label
      class="_atom_frm__label customCss _atom_frm__label___required"
      data-test="1"
      disabled="false"
      for="inputID"
      required="true"
    />
  </div>
</body>
`;

exports[`Label should match snapshot with slot 1`] = `
<body>
  <div>
    <label
      class="_atom_frm__label _atom_frm__label___disabled"
      disabled="true"
      for="test"
      required="false"
    >
      Test 
      <b>
        bold
      </b>
    </label>
  </div>
</body>
`;

exports[`Radio should match snapshot default 1`] = `
<body>
  <div>
    <div
      class=""
    >
       
      <div
        aria-labelledby="test_label"
        class="_atom_frm__group"
      />
       
    </div>
  </div>
</body>
`;

exports[`Radio should match snapshot props 1`] = `
<body>
  <div>
    <div
      class="customCss"
    >
      <span
        class="_atom_frm__label _atom_frm__label___required"
        id="test_label"
      >
        <b>
          Test
        </b>
      </span>
       
      <div
        aria-labelledby="test_label"
        class="_atom_frm__group _atom_frm__group___toggle"
      >
        
        <label
          class="_atom_frm__label _atom_frm__label___radio"
          togglemode="true"
        >
          <input
            class="_atom_frm__radio _atom_frm__radio___toggle"
            id="test"
            name="test"
            required=""
            type="radio"
            value="1"
          />
           
          <span
            aria-label="Lagden"
          >
            Lagden
          </span>
           
        </label>
        
        <label
          class="_atom_frm__label _atom_frm__label___radio"
          togglemode="true"
        >
          <input
            class="_atom_frm__radio _atom_frm__radio___toggle"
            id="test"
            name="test"
            required=""
            type="radio"
            value="2"
          />
           
          <span
            aria-label="Takamoto"
          >
            Takamoto
          </span>
           
        </label>
        
        <label
          class="_atom_frm__label _atom_frm__label___radio"
          togglemode="true"
        >
          <input
            class="_atom_frm__radio _atom_frm__radio___toggle"
            id="test"
            name="test"
            required=""
            type="radio"
            value="3"
          />
           
          <span
            aria-label="Tadashi"
          >
            Tadashi
          </span>
           
        </label>
        
        <label
          class="_atom_frm__label _atom_frm__label___radio"
          togglemode="true"
        >
          <input
            class="_atom_frm__radio _atom_frm__radio___toggle"
            id="test"
            name="test"
            required=""
            type="radio"
            value="4"
          />
           
          <span
            aria-label="Rita"
          >
            Rita
          </span>
           
        </label>
        
        <label
          class="_atom_frm__label _atom_frm__label___radio"
          togglemode="true"
        >
          <input
            class="_atom_frm__radio _atom_frm__radio___toggle"
            id="test"
            name="test"
            required=""
            type="radio"
            value="5"
          />
           
          <span
            aria-label="Jorge"
          >
            Jorge
          </span>
           
        </label>
      </div>
       
      <small
        class="_atom_frm__error___message"
        title=""
      >
        
      </small>
    </div>
  </div>
</body>
`;

exports[`Select should match snapshot default 1`] = `
<body>
  <div>
    <select
      class="_atom_frm__base _atom_frm__select "
    >
      
    </select>
  </div>
</body>
`;

exports[`Select should match snapshot props 1`] = `
<body>
  <div>
    <select
      class="_atom_frm__base _atom_frm__select customCss"
      required=""
    >
      <option
        disabled=""
        value=""
      >
        Selecione
      </option>
      
      <option
        value="1"
      >
        Lagden
      </option>
      <option
        value="2"
      >
        Takamoto
      </option>
      <option
        value="3"
      >
        Tadashi
      </option>
      <option
        value="4"
      >
        Rita
      </option>
      <option
        value="5"
      >
        Jorge
      </option>
      
    </select>
  </div>
</body>
`;

exports[`Text should match snapshot default 1`] = `
<body>
  <div>
    <div
      class=""
    >
       
      <input
        class="_atom_frm__base _atom_frm__standard"
        id="test"
        name="test"
        type="text"
      />
       
    </div>
  </div>
</body>
`;

exports[`Text should match snapshot props 1`] = `
<body>
  <div>
    <div
      class="customCss"
    >
      <label
        class="_atom_frm__label _atom_frm__label___required"
        for="test"
        required="true"
      >
        <b>
          Test
        </b>
        
      </label>
       
      <input
        class="_atom_frm__base _atom_frm__outline"
        id="test"
        name="test"
        required=""
        type="tel"
      />
       
      <small
        class="_atom_frm__error___message"
        title=""
      >
        
      </small>
    </div>
  </div>
</body>
`;
